--- a/package.json
+++ b/package.json
@@ -9,32 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.4.6",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.7",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.39.0",
-    "@tanstack/react-query": "^5.85.5",
-    "axios": "^1.11.0",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.6.0",
+    "crypto-js": "^4.1.1",
     "expo": "53.0.22",
+    "expo-constants": "~17.1.7",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
+    "expo-local-authentication": "~16.0.5",
+    "expo-notifications": "~0.31.4",
+    "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "victory-native": "^41.19.3",
-    "@shopify/react-native-skia": "v2.0.0-next.4",
-    "react-native-reanimated": "~3.17.4"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.82.5"
   },
   "private": true
 }
